force-app/main/default/objects/SAP_SD_Invoices__e/SAP_SD_Invoices__e.object-meta.xml
<CustomObject>
    <description>Evento para indicar que se ha hecho una factura en SAP en SAP.</description>
    <label>SAP SD Invoice</label>
    <pluralLabel>SAP SD Invoices</pluralLabel>
</CustomObject>