force-app/main/default/objects/SAP_SD_Invoices__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Action performed</description>
    <label>Action</label>
    <length>12</length>
    <type>Text</type>
</CustomField>