force-app/main/default/objects/SAP_SD_Invoices__e/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>SAP Distributino channel</description>
    <label>Distribution Channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>