force-app/main/default/objects/SAP_SD_Invoices__e/fields/DeliveryNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNumber__c</fullName>
    <description>Delivery note number</description>
    <label>Delivery Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>