force-app/main/default/objects/SAP_SD_Invoices__e/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <description>Invoice number</description>
    <label>Invoice Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>