force-app/main/default/objects/SAP_SD_Invoices__e/fields/isCollection__c.field-meta.xml
<CustomField>
    <fullName>isCollection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the credit note is a goods returned credit</description>
    <label>is Collection</label>
    <type>Checkbox</type>
</CustomField>