force-app/main/default/objects/SAP_SD_Invoices__e/fields/IsCredit__c.field-meta.xml
<CustomField>
    <fullName>IsCredit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a credit note</description>
    <label>Is Credit</label>
    <type>Checkbox</type>
</CustomField>