force-app/main/default/objects/SAP_SD_Invoices__e/fields/IsReversal__c.field-meta.xml
<CustomField>
    <fullName>IsReversal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the credit is the reversal of an invoice or credit</description>
    <label>Is Reversal</label>
    <type>Checkbox</type>
</CustomField>