force-app/main/default/objects/SAP_SD_Invoices__e/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <description>Order number</description>
    <label>Order Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>