force-app/main/default/objects/SAP_SD_Invoices__e/fields/RefInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>RefInvoiceNumber__c</fullName>
    <description>referred invoice (for reversals)</description>
    <label>Referred Invoice</label>
    <length>10</length>
    <type>Text</type>
</CustomField>