force-app/main/default/objects/SAP_SD_Invoices__e/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <description>Sales Organisation code</description>
    <label>Sales Org</label>
    <length>4</length>
    <type>Text</type>
</CustomField>